exports[`test the button handling an onclick event 1`] = `
<button
  className="cXtezO"
  onClick={[Function]}
  type="button">
  ButtonValue
</button>
`;

exports[`test the button handling an onclick event 2`] = `
<button
  className="cXtezO"
  onClick={[Function]}
  type="button">
  ButtonValue
</button>
`;

exports[`test the button matches the snapshot 1`] = `
<button
  className="cXtezO"
  type="button">
  ButtonValue
</button>
`;

exports[`test the button with button type given matches the snapshot 1`] = `
<button
  className="cXtezO"
  type="button">
  ButtonValue
</button>
`;
